better looking GUI

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,12 +17,20 @@
 
     <header>
         <div class="tab-cont">
-            <div class="tab-item"><button class="button-72" role="button"><a href="index.html"></a>Home</button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="About Us.html"></a>About Us</button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="Faq.html"></a>FAQS</button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html"></a>Sign-Up</button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html"></a>Log-In</button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="index.html">Home</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="About Us.html">About Us</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="Faq.html">FAQS</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Sign-Up</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Log-In</a></button></div>
+        </div>    
     </header>
+    <pre class="text-container">
+    <p>   <b style="font-family: cursive;">Welcome To TradeWinds Trading Hub!</b><br>
+    We Are Here To help you trade your way<br>
+    to a future of immense opportunnities<br>
+    and, of course, more Trading!<br>
+    <b>You Had Better Buckle Up!</b></p>   
+    </pre> 
 </body>
 </html>
 
