updated web content

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -24,6 +24,8 @@
             <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Log-In</a></button></div>
         </div>    
     </header>
+
+
     <pre class="text-container">
     <p>   <b style="font-family: cursive;">Welcome To TradeWinds Trading Hub!</b><br>
     We Are Here To help you trade your way<br>
@@ -31,6 +33,36 @@
     and, of course, more Trading!<br>
     <b>You Had Better Buckle Up!</b></p>   
     </pre> 
+
+    <pre class="text-container1">
+    <p><b style="font-family: cursive;">Join the Crypto Revolution:<br>Sign Up Today because...!</b><br>
+With us you will get to safely explore the<br> 
+unknown or rather the untraded!!<br>
+    </p>
+    </pre>
+
+    <pre class="text-container2">
+        <p>   <b style="font-family: cursive;"> Welcome To TradeWinds Trading Hub!</b><br>
+        We Are Here To help you trade your way<br>
+        to a future of immense opportunnities<br>
+        and, of course, more Trading!<br>
+        <b>You Had Better Buckle Up!</b></p>   
+        </pre> 
+
+    <pre class="text-container2">
+            <p>   <b style="font-family: cursive;">        Welcome To The TradeWinds Trading Hub!</b><br>
+            We Are Here To help you trade your way<br>
+            to a future of immense opportunnities<br>
+            and, of course, more Trading!<br>
+            <b>You Had Better Buckle Up!</b></p>   
+    </pre> 
+
+
+    <div class="ticker-container">
+        <ul id="ticker">
+            <!-- Cryptocurrency price items will be dynamically added here -->
+        </ul>
+    </div>
 </body>
 </html>
 
