--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="tab-item"><button class="button-72" role="button"><a href="index.html">Home</a></button></div>
             <div class="tab-item"><button class="button-72" role="button"><a href="About Us.html">About Us</a></button></div>
             <div class="tab-item"><button class="button-72" role="button"><a href="Faq.html">FAQS</a></button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Sign-Up</a></button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Log-In</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-up.html">Sign-Up</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-in.html">Log-In</a></button></div>
         </div>    
     </header>
 
