--- a/About Us.html
+++ b/About Us.html
@@ -21,9 +21,19 @@
             <div class="tab-item"><button class="button-72" role="button"><a href="About Us.html">About Us</a></button></div>
             <div class="tab-item"><button class="button-72" role="button"><a href="Faq.html">FAQS</a></button></div>
             <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Sign-Up</a></button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Log-In</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-in.html">Log-In</a></button></div>
         </div>
     </header>
+    <pre class="text-container3">
+        <b>Who Are We? What Do We Do?</b><br><br>
+        Trade Winds sets sail as the premier destination for online trading enthusiasts, 
+        offering a sophisticated platform tailored to meet the needs of traders of all levels. 
+        Harnessing the power of cutting-edge technology, Trade Winds delivers unparalleled market analysis, 
+        real-time insights, and bespoke trading strategies across a diverse range of assets, 
+        from cryptocurrencies to stocks and beyond. With its intuitive interface and customizable features, 
+        Trade Winds empowers users to navigate the seas of financial markets with confidence and precision. 
+        Embark on your trading journey with Trade Winds and chart a course towards prosperity in the ever-changing world of finance.
+    </pre>
 </body>
 </html>
 
