--- a/Faq.html
+++ b/Faq.html
@@ -21,7 +21,7 @@
             <div class="tab-item"><button class="button-72" role="button"><a href="About Us.html">About Us</a></button></div>
             <div class="tab-item"><button class="button-72" role="button"><a href="Faq.html">FAQS</a></button></div>
             <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Sign-Up</a></button></div>
-            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-Up.html">Log-In</a></button></div>
+            <div class="tab-item"><button class="button-72" role="button"><a href="Sign-in.html">Log-In</a></button></div>
         </div>
     </header>
 </body>
