updated user interface

--- a/About Us.html
+++ b/About Us.html
@@ -24,16 +24,55 @@
             <div class="tab-item"><button class="button-72" role="button"><a href="Sign-in.html">Log-In</a></button></div>
         </div>
     </header>
-    <pre class="text-container3">
-        <b>Who Are We? What Do We Do?</b><br><br>
+    <pre class="text-container4">
+        <h3>Who Are We? What Do We Do?</h3>
         Trade Winds sets sail as the premier destination for online trading enthusiasts, 
         offering a sophisticated platform tailored to meet the needs of traders of all levels. 
         Harnessing the power of cutting-edge technology, Trade Winds delivers unparalleled market analysis, 
         real-time insights, and bespoke trading strategies across a diverse range of assets, 
         from cryptocurrencies to stocks and beyond. With its intuitive interface and customizable features, 
         Trade Winds empowers users to navigate the seas of financial markets with confidence and precision. 
-        Embark on your trading journey with Trade Winds and chart a course towards prosperity in the ever-changing world of finance.
+        Embark on your trading journey with Trade Winds and chart a course towards prosperity in the 
+        ever-changing world of finance.
+
     </pre>
+    <pre class="text-container4">
+        <h3>Why Join Us...</h3>
+        TradeWinds offers a comprehensive and user-friendly trading platform that stands out
+        in the competitive landscape of Cryptocurrency trading. With our sophisticated algorithms
+        and  cutting-edge technology, our platform provides users with valuable insights and data-driven
+        strategies to optimize their trading decisions. Whether you are a novice trader looking to
+        enter the Crypto world or an experienced investor seeking to enhance your portfolio,
+        TradeWinds caters to all skill levels. By leveraging  advanced machine learning algorithms,
+        the platform continually analyses market trends and patterns, enabling users to make informed
+        trades in real time.
+
+        Moreover, TradeWinds prioritizes security and reliability, providing users with 
+        peace of mind when it comes to safeguarding their assets and personal information.
+        With stringent security measures in place, including encryption protocols and multi-factor
+        authentication, users can trust that their funds are protected from unauthorized access.
+        Additionally, our platform offers responsive customer support, ensuring that users receive 
+        timely assistance whenever they encounter any issues or have inquiries about the platform's features.
+        Whether you are seeking to capitalize on short-term trading opportunities or build a long term
+        investment strategy, TradeWinds empowers you with the tools and resources needed in the dynamic 
+        crypto market with confidence and success!
+        
+        Wow! You made it this far..?
+        Well it's high time you click the button below and join us for a whole new experience...!
+
+        <button class="buttoner" role="button"><a href="Sign-up.html">Sign-Up</a></button><button class="buttoner" role="button"><a href="Sign-in.html">Sign-In</a></button>
+    </pre>
+
+    <div class="contact">
+        <h5>Our Social Media</h5>
+        <a href="https://www.linkedin.com">LinkedIn</a><br>
+        <a href="https://www.instagram.com">Instagram</a><br>
+        <a href="https://www.twitter.com">Twitter</a><br>
+        <a href="https://www.discord.com">Discord</a><br>
+        <a href="https://www.facebook.com">Facebook</a><br>
+        <a href="https://www.reddit.com">Reddit</a><br>
+    </div>
+
 </body>
 </html>
 
