--- a/Sign-Up.html
+++ b/Sign-Up.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-    <!--Stylesheet-->
     <style media="screen">
       *,
 *:before,
@@ -169,16 +168,16 @@ button{
         <label for="Ethereum Id">Your ETHEREUM Account Id:</label>
         <input type="text" placeholder="Your Ethereum Acc. Id" id="Ethereum Id">
 
-        <label for="Secret Question">Your Secret Question:</label>
+        <label for="Secret Question">Your Security Question:</label>
         <input type="text" placeholder="Your Secret Question" id="Secret Question">
 
-        <label for="Secret Answer">Your Secret Answer:</label>
+        <label for="Secret Answer">Answer:</label>
         <input type="text" placeholder="Your Secret Answer" id="Secret Answer">
 
         <label for="Upline">Upline:</label>
         <input type="text" placeholder="Upline" id="Upline">
 
-        <button>Log In</button><br>
+        <button>Sign Up</button><br>
 
         <p>Already have an account? <a href="Sign-in.html">Sign-In</a></p>
     </form>
