--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
     We Are Here To help you trade your way<br>
     to a future of immense opportunnities<br>
     and, of course, more Trading!<br>
-    <b>You Had Better Buckle Up!</b></p>   
+    <b>You Had Better Buckle Up!</b><br>
+    <button class="buttoner" role="button"><a href="Sign-in.html">Sign in</a></button>
+    </p>   
     </pre> 
 
     <pre class="text-container1">
-    <p><b style="font-family: cursive;">Join the Crypto Revolution:<br>Sign Up Today because...!</b><br>
+    <p><b style="font-family: cursive;">Join the Crypto Revolution: Sign Up...!</b><br>
 With us you will get to safely explore the<br> 
 unknown or rather the untraded!!<br>
+With You All The Way...<br>
+<b>Take a sure step with us today...</b><br>
+<button class="buttoner" role="button"><a href="Sign-up.html">Join Us</a></button>
     </p>
     </pre>
 
@@ -46,7 +51,9 @@ unknown or rather the untraded!!<br>
         We Are Here To help you trade your way<br>
         to a future of immense opportunnities<br>
         and, of course, more Trading!<br>
-        <b>You Had Better Buckle Up!</b></p>   
+        <b>You Had Better Buckle Up!</b><br><br>
+        <button class="buttoner" role="button"><a href="Sign-up.html">Join Us</a></button>
+</p>   
         </pre> 
 
     <pre class="text-container2">
@@ -55,14 +62,18 @@ unknown or rather the untraded!!<br>
             to a future of immense opportunnities<br>
             and, of course, more Trading!<br>
             <b>You Had Better Buckle Up!</b></p>   
-    </pre> 
-
-
-    <div class="ticker-container">
-        <ul id="ticker">
-            <!-- Cryptocurrency price items will be dynamically added here -->
-        </ul>
+    </pre>
+    
+    <div class="contact">
+        <h5>Our Social Media</h5>
+        <a href="https://www.linkedin.com">LinkedIn</a><br>
+        <a href="https://www.instagram.com">Instagram</a><br>
+        <a href="https://www.twitter.com">Twitter</a><br>
+        <a href="https://www.discord.com">Discord</a><br>
+        <a href="https://www.facebook.com">Facebook</a><br>
+        <a href="https://www.reddit.com">Reddit</a><br>
     </div>
+
 </body>
 </html>
 
