--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="ticker-container">
         <ul id="ticker">
-            <!-- Cryptocurrency price items will be dynamically added here -->
+            <!-- Ticker Display -->
         </ul>
     </div>
 
