--- a/frontend/Sign-in.html
+++ b/frontend/Sign-in.html
@@ -148,7 +148,7 @@ button{
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password">
 
-        <button>Log In</button><br><br>
+        <button><a href="Dashboard.html">Log In</a></button><br><br>
 
         <p>Don't have an account? <a href="Sign-up.html">Sign-Up</a></p>
     </form>
