--- a/frontend/Dashboard.html
+++ b/frontend/Dashboard.html
@@ -14,14 +14,14 @@
         </div>
     </div>
     <div class="navigation-bar">
-        <a href="#" class="icon-link"><img src="Resources/img/Dashboard.png" alt="Dashboard"></a>
-        <a href="#" class="icon-link"><img src="Resources/img/Money.png" alt="Funds"></a>
-        <a href="#" class="icon-link"><img src="Resources/img/Withdraw.png" alt="Withdraw"></a>
-        <a href="#" class="icon-link"><img src="Resources/img/History.png" alt="History"></a>
-        <a href="#" class="icon-link"><img src="Resources/img/Banners.png" alt="Banners"></a>
-        <a href="#" class="icon-link"><img src="Resources/img/Links.png" alt="Ref. Links"></a>
-        <a href="#" class="icon-link"><img src="Resources/img/Account.png" alt="Edit Account"></a>
-        <a href="#" class="icon-link"><img src="Resources/img/LogOut.png" alt="Icon 5"></a>
+        <a href="Dashboard.html" class="icon-link"><img src="Resources/img/Dashboard.png" alt="Dashboard"><div class="popup">Dashboard</div></a>
+        <a href="Deposit.html" class="icon-link"><img src="Resources/img/Money.png" alt="Funds"><div class="popup">Make Deposit</div></a>
+        <a href="#" class="icon-link"><img src="Resources/img/Withdraw.png" alt="Withdraw"><div class="popup">Withdraw</div></a>
+        <a href="#" class="icon-link"><img src="Resources/img/History.png" alt="History"><div class="popup">Earnings History</div></a>
+        <a href="#" class="icon-link"><img src="Resources/img/Banners.png" alt="Banners"><div class="popup">Your Banners</div></a>
+        <a href="#" class="icon-link"><img src="Resources/img/Links.png" alt="Ref. Links"><div class="popup">References</div></a>
+        <a href="#" class="icon-link"><img src="Resources/img/Account.png" alt="Edit Account"><div class="popup">Edit Account</div></a>
+        <a href="#" class="icon-link"><img src="Resources/img/LogOut.png" alt="Icon 5"><div class="popup">Logout</div></a>
     </div>
 
     <script>
