--- a/frontend/Dashboard.html
+++ b/frontend/Dashboard.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="Resources/css/Dash.css">
+    <title>Magnetic Trader</title>
 </head>
 <body>
     <div class="header">
@@ -16,7 +17,7 @@
     <div class="navigation-bar">
         <a href="Dashboard.html" class="icon-link"><img src="Resources/img/Dashboard.png" alt="Dashboard"><div class="popup">Dashboard</div></a>
         <a href="Deposit.html" class="icon-link"><img src="Resources/img/Money.png" alt="Funds"><div class="popup">Make Deposit</div></a>
-        <a href="#" class="icon-link"><img src="Resources/img/Withdraw.png" alt="Withdraw"><div class="popup">Withdraw</div></a>
+        <a href="Withdraw.html" class="icon-link"><img src="Resources/img/Withdraw.png" alt="Withdraw"><div class="popup">Withdraw</div></a>
         <a href="#" class="icon-link"><img src="Resources/img/History.png" alt="History"><div class="popup">Earnings History</div></a>
         <a href="#" class="icon-link"><img src="Resources/img/Banners.png" alt="Banners"><div class="popup">Your Banners</div></a>
         <a href="#" class="icon-link"><img src="Resources/img/Links.png" alt="Ref. Links"><div class="popup">References</div></a>
@@ -42,6 +43,7 @@
             <textarea class="textarea">This is Your Link</textarea>
         </div>
         <div class="current-balance"><div class="current-balance-box">Current Balance<br><span>$0.00</span></div></div>
+        <h4 class="titler">Account Information:</h4>
         <div class="account-balance-section">
             <div class="text-container">
                 <div class="box">Main Balance<br><span>$0</span></div>
@@ -51,13 +53,22 @@
                 <div class="box">Pending Withdrawal<br><span>$0.00</span></div>
                 <div class="box">Withdrew Total<br><span>$0.00</span></div>
                 <div class="box">Last Deposit<br><span>$N/A</span></div>
-                <div class="box">Last Withdrawal<br><span>$N/A</span></div>
+                <div class="box">Last Withdrawal<br><span>$N/A</span></div><br><br>
             </div>
-            <!-- Add your account balance details here -->
         </div>
-        <div class="account-detail-section">
-            <!-- Add your account details here -->
+        <h4 class="titler">Account Stats:</h4>
+        <div class="text-container2">
+            <div class="box2">Total Earnings:</div>
         </div>
+    </div>
+    <div class="contact">
+        <h5>Our Social Media</h5>
+        <a href="https://www.linkedin.com">LinkedIn</a><br>
+        <a href="https://www.instagram.com">Instagram</a><br>
+        <a href="https://www.twitter.com">Twitter</a><br>
+        <a href="https://www.discord.com">Discord</a><br>
+        <a href="https://www.facebook.com">Facebook</a><br>
+        <a href="https://www.reddit.com">Reddit</a><br>
     </div>
 </body>
 </html>
