--- a/frontend/Withdraw.html
+++ b/frontend/Withdraw.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <link rel="stylesheet" href="Resources/css/Dash.css">
-    <title>Magnetic Trader</title>
 </head>
 <body>
     <div class="header">
@@ -39,17 +38,17 @@
             <div class="text-container1">
                 <div class="box1">
                     Silver Plan<br><span>7%</span><br><br><span>$50 - 2,999</span><br>After 24 hours<br><br>
-                    <span><button class="buttoner" onclick="changeColor(this)">Click to Select</button><script src="Resources/Js/styling.js"></script></span>
+                    <span><button class="buttoner" onclick="changeColor(this)">Get Bonus</button><script src="Resources/Js/styling.js"></script></span>
                 </div>
 
                 <div class="box1">
                     Gold Plan<br><span>12%</span><br><br><span>$3,000 - 14,000</span><br>After 24 hours<br><br>
-                    <span><button class="buttoner" onclick="changeColor(this)">Click to Select</button><script src="Resources/Js/styling.js"></script></span>
+                    <span><button class="buttoner" onclick="changeColor(this)">Get Bonus</button><script src="Resources/Js/styling.js"></script></span>
                 </div>
 
                 <div class="box1">
                     Diamond Plan<br><span>18%</span><br><br><span>$15,000 - UNLIMITED</span><br>After 24 hours<br><br>
-                    <span><button class="buttoner" onclick="changeColor(this)">Click to Select</button><script src="Resources/Js/styling.js"></script></span>
+                    <span><button class="buttoner" onclick="changeColor(this)">Get Bonus</button><script src="Resources/Js/styling.js"></script></span>
                 </div>
 
             </div>
@@ -66,12 +65,6 @@
             </div>
             <div class="center"><button class="buttoner" onclick="changeColor(this)">Submit</button><script src="Resources/Js/styling.js"></script></div><br>
         </div>
-
-        <h4 class="titler">Deposit History:</h4>
-        <div>
-
-        </div>
-
         <div class="contact">
             <h5>Our Social Media</h5>
             <a href="https://www.linkedin.com">LinkedIn</a><br>
