--- a/frontend/Edits.html
+++ b/frontend/Edits.html
@@ -34,44 +34,49 @@
             <textarea class="textarea">This is Your Link</textarea>
         </div>
         <div class="current-balance"><div class="current-balance-box">Current Balance<br><span>$0.00</span></div></div>
-        <div class="account-balance-section">\
-            <h4 class="titler">Choose Your Plan:</h4>
-            <div class="text-container1">
-                <div class="box1">
-                    Silver Plan<br><span>7%</span><br><br><span>$50 - 2,999</span><br>After 24 hours<br><br>
-                    <span><button class="buttoner" onclick="changeColor(this)">Click to Select</button><script src="Resources/Js/styling.js"></script></span>
-                </div>
-
-                <div class="box1">
-                    Gold Plan<br><span>12%</span><br><br><span>$3,000 - 14,000</span><br>After 24 hours<br><br>
-                    <span><button class="buttoner" onclick="changeColor(this)">Click to Select</button><script src="Resources/Js/styling.js"></script></span>
-                </div>
-
-                <div class="box1">
-                    Diamond Plan<br><span>18%</span><br><br><span>$15,000 - UNLIMITED</span><br>After 24 hours<br><br>
-                    <span><button class="buttoner" onclick="changeColor(this)">Click to Select</button><script src="Resources/Js/styling.js"></script></span>
-                </div>
-
-            </div>
-        </div>
-        <h4 class="titler">Deposit Method:</h4>
-        <div class="text-container2">
-            <div class="box2">
-                <textarea class="textarea">50.00</textarea> $0/ Main Balance <br><br><br>
+        <div>
+            <div class="form-container">
                 <form>
-                    <label> <input type="radio" name="Bitcoin" value="Bitcoin"> Deposit from Bitcoin </label>
-                    <label> <input type="radio" name="Bitcoin" value="Bitcoin"> Deposit from USDT[TRC 20]</label>
-                    <label> <input type="radio" name="Bitcoin" value="Bitcoin"> Deposit from Ethereum</label>
+                    <div class="form-group">
+                        <label>Account Name:</label>
+                        <div class="input">BARLION</div>
+                    </div>
+                    <div class="form-group">
+                        <label>Registration Date:</label>
+                        <div class="input">May-12-2024 07:05:38 AM</div>
+                    </div>
+                    <div class="form-group">
+                        <label>Your Full Name:</label>
+                        <input type="text" value="Bravin Kipchumba">
+                    </div>
+                    <div class="form-group">
+                        <label>New Password:</label>
+                        <input type="password">
+                    </div>
+                    <div class="form-group">
+                        <label>Retype Password:</label>
+                        <input type="password">
+                    </div>
+                    <div class="form-group">
+                        <label>Your BITCOIN Account ID:</label>
+                        <input type="text">
+                    </div>
+                    <div class="form-group">
+                        <label>Your USDT [TRC 20] Account ID:</label>
+                        <input type="text">
+                    </div>
+                    <div class="form-group">
+                        <label>Your ETHEREUM Account ID:</label>
+                        <input type="text">
+                    </div>
+                    <div class="form-group">
+                        <label>Your E-mail address:</label>
+                        <input type="email" value="bravinbarlion01@gmail.com">
+                    </div>
+                    <div class="center"><button class="buttoner" onclick="changeColor(this)">Submit</button><script src="Resources/Js/styling.js"></script></div><br>
                 </form>
             </div>
-            <div class="center"><button class="buttoner" onclick="changeColor(this)">Submit</button><script src="Resources/Js/styling.js"></script></div><br>
         </div>
-
-        <h4 class="titler">Deposit History:</h4>
-        <div>
-
-        </div>
-
         <div class="contact">
             <h5>Our Social Media</h5>
             <a href="https://www.linkedin.com">LinkedIn</a><br>
