--- a/frontend/Sign-Up.html
+++ b/frontend/Sign-Up.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Magnetic Trader Sign-up</title>
+    <title>Magnetic Trading Sign-up</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
@@ -134,6 +134,10 @@ button{
 .social i{
   margin-right: 4px;
 }
+.butco {
+    color: #080710;
+    text-decoration: none;
+}
 
     </style>
 </head>
@@ -143,7 +147,7 @@ button{
         <div class="shape"></div>
     </div>
     <form>
-        <h3><a href="Sign-in.html">Sign-In</a> || Sign-Up </h3>
+        <h3>Account Log In</h3>
 
         <label for="name">Full Name:</label>
         <input type="text" placeholder="Your Full Name" id="name">
