--- a/frontend/Sign-in.html
+++ b/frontend/Sign-in.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Design by foolishdeveloper.com -->
-    <title>Magnetic Trader Sign-In</title>
+    <title>Magnetic Trading Sign-In</title>
  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -66,7 +65,7 @@ form{
 }
 form *{
     font-family: 'Poppins',sans-serif;
-    color: #ffffff;
+    color: #faf6f6;
     letter-spacing: 0.5px;
     outline: none;
     border: none;
@@ -77,7 +76,7 @@ form h3{
     line-height: 42px;
     text-align: center;
     text-decoration: none;
-    background-color: rgba(79, 79, 79, 0.7);
+    background-color: rgba(25, 5, 5, 0.7);
     border-radius: 15px;
 }
 
@@ -131,6 +130,10 @@ button{
 .social i{
   margin-right: 4px;
 }
+.butco {
+    color: #080710;
+    text-decoration: none;
+}
 
     </style>
 </head>
@@ -140,7 +143,7 @@ button{
         <div class="shape"></div>
     </div>
     <form>
-        <h3>Sign-In || <a href="Sign-up.html">Sign-Up</a></h3>
+        <h3>Account Log In</h3>
 
         <label for="username">Username</label>
         <input type="text" placeholder="Email or Phone" id="username">
@@ -148,7 +151,7 @@ button{
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password">
 
-        <button><a href=>Log In</a></button><br><br>
+        <button><a class="butco" href="Dashboard.html">Log In</a></button><br><br>
 
         <p>Don't have an account? <a href="Sign-up.html">Sign-Up</a></p>
     </form>
