--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Resources/css/mystyles.css">
-    <title>Magnetic Trader</title>
+    <title>Magnetic Trading</title>
 </head>
 <body>
     <div class="ticker-container">
@@ -26,43 +26,44 @@
     </header>
 
 
-    <pre class="text-container">
-    <p>   <b style="font-family: cursive;">Welcome To TradeWinds Trading Hub!</b><br>
-    We Are Here To help you trade your way<br>
-    to a future of immense opportunnities<br>
-    and, of course, more Trading!<br>
-    <b>You Had Better Buckle Up!</b><br>
-    <button class="buttoner" role="button"><a href="Sign-in.html">Sign in</a></button>
-    </p>   
-    </pre> 
-
-    <pre class="text-container1">
-    <p><b style="font-family: cursive;">Join the Crypto Revolution: Sign Up...!</b><br>
-With us you will get to safely explore the<br> 
-unknown or rather the untraded!!<br>
-With You All The Way...<br>
-<b>Take a sure step with us today...</b><br>
-<button class="buttoner" role="button"><a href="Sign-up.html">Join Us</a></button>
-    </p>
-    </pre>
-
-    <pre class="text-container2">
-        <p>   <b style="font-family: cursive;"> Welcome To TradeWinds Trading Hub!</b><br>
-        We Are Here To help you trade your way<br>
-        to a future of immense opportunnities<br>
-        and, of course, more Trading!<br>
-        <b>You Had Better Buckle Up!</b><br><br>
-        <button class="buttoner" role="button"><a href="Sign-up.html">Join Us</a></button>
-</p>   
-        </pre> 
-
-    <pre class="text-container2">
-            <p>   <b style="font-family: cursive;">        Welcome To The TradeWinds Trading Hub!</b><br>
+    <div class="text-container">
+        <p><b>Welcome To TradeWinds Trading Hub!</b><br>
             We Are Here To help you trade your way<br>
             to a future of immense opportunnities<br>
             and, of course, more Trading!<br>
-            <b>You Had Better Buckle Up!</b></p>   
-    </pre>
+            <b>You Had Better Buckle Up!</b><br>
+            <button class="buttoner" role="button"><a href="Sign-in.html">Sign in</a></button>
+        </p>   
+    </div> 
+
+    <div class="text-container1">
+        <p><b>Join the Crypto Revolution: Sign Up...!</b><br>
+            With us you will get to safely explore the<br> 
+            unknown or rather the untraded!!<br>
+            With You All The Way...<br>
+            <b>Take a sure step with us today...</b><br>
+            <button class="buttoner" role="button"><a href="Sign-up.html">Join Us</a></button>
+        </p>
+    </div>
+
+    <div class="text-container2">
+        <p><b> Welcome To Magnetic Trading!</b><br>
+            We Are Here To help you trade your way<br>
+            to a future of immense opportunnities<br>
+            and, of course, more Trading!<br>
+            <b>You Had Better Buckle Up!</b><br><br>
+            <button class="buttoner" role="button"><a href="Sign-up.html">Join Us</a></button>
+        </p>   
+    </div> 
+
+    <div class="text-container2">
+        <p><b>Welcome To The TradeWinds Trading Hub!</b><br>
+            We Are Here To help you trade your way<br>
+            to a future of immense opportunnities<br>
+            and, of course, more Trading!<br>
+            <b>You Had Better Buckle Up!</b>
+        </p>   
+    </div>
     
     <div class="contact">
         <h5>Our Social Media</h5>
