--- a/frontend/Faq.html
+++ b/frontend/Faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Resources/css/mystyles.css">
-    <title>Magnetic Trader</title>
+    <title>Magnetic Trading</title>
 </head>
 <body>
     <div class="ticker-container">
